--- a/src/assets/scss/const.scss
+++ b/src/assets/scss/const.scss
@@ -3,12 +3,12 @@
 // Color constants
 $color-background           : #f0a2a2;
 $color-background-d         : rgba(0, 0, 0, 0.3);
-$color-background-player    : #ff8a8a;
+$color-background-player    : #8afff9;
 $color-highlight-background : #333;
-$color-dialog-background    : #e77a7a;
+$color-dialog-background    : #7ac8e7;
 $color-theme                : #44b673;
 $color-theme-d              : rgba(255, 205, 49, 0.5);
-$color-sub-theme            : #d93f30;
+$color-sub-theme            : #30d9a1;
 $color-text                 : rgb(255, 255, 255);
 $color-text-d               : rgb(55, 167, 211);
 $color-text-l               : rgba(255, 255, 255, 0.5);
